# vcgra

./: .gitignore  CMakeLists.txt  Makefile  bin  main.cpp  node-mapping.json
config/: cycle-config.json  vcgra-config.json
json-parse/: JsonNode.h  JsonObject.h  JsonParser.h  Lexer.h
src/: main.cpp
src/json-parse/: JsonParser.h  Token.h
src/tree-loader/: Instance.h  Node.h  TreeLoader.h  TypeConverter.h
src/vcgra/: CycleCounter.h  ProcessingUnit.h  VCGRA.h  VCGRAConfig.h
test/: test_main.cpp
tree-loader/: Instance.cpp  Instance.h  Node.cpp  Node.h  TreeLoader.cpp  TreeLoader.h  TypeConverter.h
trees/: tree.dot
vcgra/: CycleCounter.h  Instance.h  MappingConfig.h  ProcessingUnit.cpp  ProcessingUnit.h  VCGRA.cpp  VCGRA.h
